--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 </head>
 <body>
+
+	<!-- Header+Promo -->
 	<section class="header-section">
 					<div class="container">
 							<header class="header row">
@@ -68,7 +70,7 @@
 					
 							</div>
 					</div>
-			</section>
+			</section><!-- /Header+Promo -->
 	
 	
 					<section class="top-content">
