--- a/index.html
+++ b/index.html
@@ -73,17 +73,30 @@
 	</section><!-- /Header+Promo -->
 	
 	
-					<section class="top-content">
-							<div class="container">
-									<h1>Top 15 Online Casinos in Canada 2025</h1>
-									<div class="row">
-											<div class="col-3 green">Section1</div>
-											<div class="col-3 violet">Section2</div>
-											<div class="col-3 red">Section3</div>
-											<div class="col-3 violet">Section4</div>
-									</div>
-							</div> 
-					</section>
+        <section class="top-content">
+                <div class="container">
+                        <h1>Top 15 Online Casinos in Canada 2025</h1>
+                        <div class="row">
+                                <div class="col-3 green">Section1</div>
+                                <div class="col-3 violet">Section2</div>
+                                <div class="col-3 red">Section3</div>
+                                <div class="col-3 violet">Section4</div>
+                        </div>
+                </div> 
+        </section>
+
+        <section class="top-content2">
+            <div class="container">
+                    <h1>Top 15 Online Casinos in Canada 2025</h1>
+                    <div class="row">
+                            <div class="col-3 green">Section1</div>
+                            <div class="col-3 violet">Section2</div>
+                            <div class="col-3 red">Section3</div>
+                            <div class="col-3 violet">Section4</div>
+                    </div>
+            </div> 
+        </section>
+            
 
 
 
