--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
                     </div>
             </div> 
         </section>
+				<section class="top-content3">
+					<div class="container">
+									<h1>Top 15 Online Casinos in Canada 2025</h1>
+									<div class="row">
+													<div class="col-3 green">Section1</div>
+													<div class="col-3 violet">Section2</div>
+													<div class="col-3 red">Section3</div>
+													<div class="col-3 violet">Section4</div>
+									</div>
+					</div> 
+			</section>
             
 
 
