added code for sections in top list

--- a/index.html
+++ b/index.html
@@ -74,56 +74,20 @@
 	
 	<section class="top-content">
 		<div class="container">
-			<h1>Top 15 Online Casinos in Canada 2025</h1>
+			<h1 class="toph">Top 15 Online Casinos in Canada 2025</h1>
 			<div class="row">
-				<div class="col-3 green">Section1</div>
-				<div class="col-3 violet">Section2</div>
+				<div class="col-3"><img src="img/main/logo.svg" class="label-promo" alt="logo"><img src="img/main/rate.svg" alt="rate"><p class="main-text-rate">9/10</p></div>
+				<div class="col-3 text-pad"><p>Tervetuliaisbonus</p><div class="promo-text fw-bold">450% jopa 1000 IK<br>+ 20% viikoittainen Cashback!</div></div>
 				<div class="col-3 red">Section3</div>
-				<div class="col-3 violet">Section4</div>
+				<div class="col-3 d-flex flex-column justify-content-center align-items-center">
+					<button class="btn play-now">Play now</button>
+					<button class="btn read-rew">Read review</button>
+				</div>
 			</div>
 		</div> 
 	</section>
 
-	<section class="top-content2">
-		<div class="container">
-			<h1>Top 15 Online Casinos in Canada 2025</h1>
-			<div class="row">
-				<div class="col-3 green">Section1</div>
-				<div class="col-3 violet">Section2</div>
-				<div class="col-3 red">Section3</div>
-				<div class="col-3 violet">Section4</div>
-			</div>
-		</div> 
-	</section>
-
-	<section class="top-content3">
-		<div class="container">
-			<h1>Top 15 Online Casinos in Canada 2025</h1>
-			<div class="row">
-				<div class="col-3 green">Section1</div>
-				<div class="col-3 violet">Section2</div>
-				<div class="col-3 red">Section3</div>
-				<div class="col-3 violet">Section4</div>
-			</div>
-		</div> 
-	</section>
-
-	<!-- top_content4 -->
-	<section id="top_content4">
-		<div class="container">
-			<h2>top_content4</h2>
-		</div>
-	</section> <!-- / top_content4 -->
 	
-
-
-
-
-
-
-
-
-
 
 
 	
