--- a/index.html
+++ b/index.html
@@ -8,70 +8,62 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
-	<!-- Header+Promo -->
-	<section class="header-section">
-      <div class="container">
-		<header class="header row">
-			
-				<div class="row">
+	<!-- header -->
+	<header class="header">
+		<div class="container">
+			<div class="row">
 
-					<div class="col-4">
-						<div class="logo"><img src="img/header/logo.svg" alt="logo"></div>
-					</div>
-
-					<div class="col-5 menu-nav">
-						<nav class="menu">
-							<ul>
-								<li><a href="#">Products</a></li>
-								<li><a href="#">Pricing</a></li>
-								<li><a href="#">Resources</a></li>
-								<li><a href="#">Company</a></li>
-							</ul>
-						</nav>
-					</div>
-
-					<div class="col-3 text-end">
-						<button class="btn btnin">Sign in</button>
-						<button class="btn btnup">Sign up</button>
-					</div>
-
-				</div>
-			
-		</header>
-
-		<div class="row headercontent">
-			<div class="col">
-				<h1 class="main-label">Best New Online Casino 2025</h1>
-				<p class="main-text p-3">Casivo.ca - Find Online Casinos in Canada with Casivo. <br>Find reputable and licensed casinos using the guides, tools, and tricks at Casivo to get the most out of your gambling experience. Our experts have carefully reviewed and rated all casino sites to make sure you make an informed decision when picking the best online casinos in Canada.</p>
-			</div>
-
-			<div class="col">
-
-				<div class="row">
-					<div class="col-6"><img src="img/header/offer-item.svg" class="img-fluid img-promo" alt="offer"></div>
-					<div class="col-6"><img src="img/header/offer-item.svg" class="img-fluid img-promo" alt="offer"></div>
+				<div class="col-4 col-lg-4">
+					<div class="logo"><img src="img/header/logo.svg" alt="logo"></div>
 				</div>
 
-				<div class="row">
-					<div class="col-6 p-3"><img src="img/header/offer-item.svg" class="img-fluid img-promo" alt="offer"></div>
-					<div class="col-6 p-3"><img src="img/header/offer-item.svg" class="img-fluid img-promo" alt="offer"></div>
+				<div class="col-8 col-lg-8 menu-nav text-end">
+					<nav class="ms-auto menu">
+						<ul>
+							<li><a href="#">Products</a></li>
+							<li><a href="#">Pricing</a></li>
+							<li><a href="#">Resources</a></li>
+							<li><a href="#">Company</a></li>
+						</ul>
+					</nav>
 				</div>
 
 			</div>
 		</div>
+	</header><!-- /header -->
+
+	<!-- Promo -->
+	<section class="promo">
+		<div class="container">
+			<div class="row headercontent">
+
+				<div class="col-lg-6">
+					<h1 class="main-label">Best New Online Casino 2025</h1>
+					<p class="main-text py-3">Casivo.ca - Find Online Casinos in Canada with Casivo. <br>Find reputable and licensed casinos using the guides, tools, and tricks at Casivo to get the most out of your gambling experience. Our experts have carefully reviewed and rated all casino sites to make sure you make an informed decision when picking the best online casinos in Canada.</p>
+				</div>
+
+				<div class="col-lg-6 align-self-center">
+
+					<div class="row g-4">
+						<div class="col-6"><img src="img/header/offer-item.svg" class="img-fluid img-promo" alt="offer"></div>
+						<div class="col-6"><img src="img/header/offer-item.svg" class="img-fluid img-promo" alt="offer"></div>
+						<div class="col-6"><img src="img/header/offer-item.svg" class="img-fluid img-promo" alt="offer"></div>
+						<div class="col-6"><img src="img/header/offer-item.svg" class="img-fluid img-promo" alt="offer"></div>
+					</div>
+
+				</div>
+
+			</div>
 		</div>
-	</section><!-- /Header+Promo -->
+	</section><!-- /Promo -->
 	
-	
+	<!-- TOP-list -->
 	<section class="top-content">
 		<div class="container">
 			<h1 class="toph">Top 15 Online Casinos in Canada 2025</h1>
@@ -85,12 +77,11 @@
 				</div>
 			</div>
 		</div> 
-	</section>
-
-	
+	</section><!-- /TOP-list -->
 
 
-	
+
+
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
