making best-list

--- a/index.html
+++ b/index.html
@@ -66,16 +66,43 @@
 	<!-- TOP-list -->
 	<section class="top-content">
 		<div class="container">
-			<h1 class="toph">Top 15 Online Casinos in Canada 2025</h1>
-			<div class="row">
-				<div class="col-3"><img src="img/main/logo.svg" class="label-promo" alt="logo"><img src="img/main/rate.svg" alt="rate"><p class="main-text-rate">9/10</p></div>
-				<div class="col-3 text-pad"><p>Tervetuliaisbonus</p><div class="promo-text fw-bold">450% jopa 1000 IK<br>+ 20% viikoittainen Cashback!</div></div>
-				<div class="col-3 red">Section3</div>
-				<div class="col-3 d-flex flex-column justify-content-center align-items-center">
-					<button class="btn play-now">Play now</button>
-					<button class="btn read-rew">Read review</button>
+
+			<h2 class="toph">Top 15 Online Casinos in Canada 2025</h2>
+
+			<div class="bestlist_card">
+				<div class="bestlist_card_num">1</div>
+				<div class="row">
+					<div class="col-3">
+						<img src="img/bestlist/casino_01.png" class="bestlist_card_logo" alt="logo">
+						<p class="main-text-rate"><img src="img/main/rate.svg" alt="rate">9/10</p>
+					</div>
+					<div class="col-3 text-pad"><p>Tervetuliaisbonus</p><div class="promo-text fw-bold">450% jopa 1000 IK<br>+ 20% viikoittainen Cashback!</div></div>
+					<div class="col-3 red">Section3</div>
+					<div class="col-3 d-flex flex-column justify-content-center align-items-center">
+						<button class="btn play-now">Play now</button>
+						<button class="btn read-rew">Read review</button>
+					</div>
 				</div>
+				<div class="text-center pt-2 small text-muted">18+ | Gamble responsibly | GambleAware.org | T&C’s apply</div>
 			</div>
+
+			<div class="bestlist_card">
+				<div class="bestlist_card_num">1</div>
+				<div class="row">
+					<div class="col-3">
+						<img src="img/bestlist/casino_01.png" class="bestlist_card_logo" alt="logo">
+						<p class="main-text-rate"><img src="img/main/rate.svg" alt="rate">9/10</p>
+					</div>
+					<div class="col-3 text-pad"><p>Tervetuliaisbonus</p><div class="promo-text fw-bold">450% jopa 1000 IK<br>+ 20% viikoittainen Cashback!</div></div>
+					<div class="col-3 red">Section3</div>
+					<div class="col-3 d-flex flex-column justify-content-center align-items-center">
+						<button class="btn play-now">Play now</button>
+						<button class="btn read-rew">Read review</button>
+					</div>
+				</div>
+				<div class="text-center pt-2 small text-muted">18+ | Gamble responsibly | GambleAware.org | T&C’s apply</div>
+			</div>
+
 		</div> 
 	</section><!-- /TOP-list -->
 
