Added some code for promo section. Test navbar

--- a/indexnavbar.html
+++ b/indexnavbar.html
@@ -17,25 +17,38 @@
 	<!-- header -->
 	<header class="header">
 		<div class="container">
-			<div class="row">
-
-				<div class="col-4 col-lg-4">
-					<div class="logo"><img src="img/header/logo.svg" alt="logo"></div>
+				<div class="row header-row">
+					<div class="col-4 col-lg-4">
+						<div class="logo"><img src="img/header/logo.svg" alt="logo"></div>
+					</div>
+					<nav class="navbar navbar-expand-lg">
+						<div class="container-fluid p-0">
+							<div class="col-8 col-lg-8 menu-nav text-end">
+								<button class="navbar-toggler ms-auto" 
+										type="button"
+										data-bs-toggle="collapse"
+										data-bs-target="#navbarNav"
+										aria-controls="navbarNav"
+										aria-expanded="false"
+										aria-label="Toggle navigation">
+									<span class="navbar-toggler-icon "></span>
+								</button>
+									
+								<div class="collapse navbar-collapse" id="navbarNav">
+									<nav class="ms-auto menu">
+										<ul>
+											<li class="nav-item"><a href="#">Products</a></li>
+											<li class="nav-item"><a href="#">Pricing</a></li>
+											<li class="nav-item"><a href="#">Resources</a></li>
+											<li class="nav-item"><a href="#">Company</a></li>
+										</ul>
+									</nav>
+								</div>
+							</div>
+						</div>
 				</div>
-
-				<div class="col-8 col-lg-8 menu-nav text-end">
-					<nav class="ms-auto menu">
-						<ul>
-							<li><a href="#">Products</a></li>
-							<li><a href="#">Pricing</a></li>
-							<li><a href="#">Resources</a></li>
-							<li><a href="#">Company</a></li>
-						</ul>
-					</nav>
-				</div>
-
 			</div>
-		</div>
+		</nav>			
 	</header><!-- /header -->
 
 	<!-- Promo -->
