--- a/indexnavbaropened.html
+++ b/indexnavbaropened.html
@@ -11,29 +11,50 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/button.css">
 </head>
 <body>
 
 	<!-- header -->
 	<header class="header">
 		<div class="container">
-			<div class="row">
-
+			<div class="row header-row align-items-center">
 				<div class="col-4 col-lg-4">
-					<div class="logo"><img src="img/header/logo.svg" alt="logo"></div>
+					<div class="logo">
+						<img src="img/header/logo.svg" alt="logo">
+					</div>
 				</div>
-
-				<div class="col-8 col-lg-8 menu-nav text-end">
-					<nav class="ms-auto menu">
-						<ul>
-							<li><a href="#">Products</a></li>
-							<li><a href="#">Pricing</a></li>
-							<li><a href="#">Resources</a></li>
-							<li><a href="#">Company</a></li>
-						</ul>
+				<div class="col-8 col-lg-8">
+					<nav class="navbar navbar-expand-lg">
+						<div class="container-fluid p-0">
+							<button class="navbar-toggler ms-auto" 
+								type="button"
+								data-bs-toggle="collapse"
+								data-bs-target="#navbarNav"
+								aria-controls="navbarNav"
+								aria-expanded="false"
+								aria-label="Toggle navigation">
+								<span class="navbar-toggler-icon"></span>
+							</button>
+							
+							<div class="collapse navbar-collapse" id="navbarNav">
+								<!-- Додаємо кнопку закриття -->
+								<button class="btn-close d-lg-none" 
+									type="button" 
+									data-bs-toggle="collapse" 
+									data-bs-target="#navbarNav">
+								</button>
+								
+								<ul class="navbar-nav ms-auto">
+									<li class="nav-item"><a class="nav-link" href="#">Products</a></li>
+									<li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
+									<li class="nav-item"><a class="nav-link" href="#">Resources</a></li>
+									<li class="nav-item"><a class="nav-link" href="#">Company</a></li>
+								</ul>
+							</div>
+						</div>
 					</nav>
 				</div>
-
 			</div>
 		</div>
 	</header><!-- /header -->
