--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/media.css">
 </head>
-<body>
+<body style="height: 2000px;">
 
 	<!-- header -->
 	<header class="header">
@@ -23,7 +24,7 @@
 					<div class="logo"><img src="img/header/logo.svg" alt="logo"></div>
 				</div>
 
-				<div class="col-8 col-lg-8 menu-nav text-end">
+				<div class="col-8 col-lg-8 menu-nav">
 					<nav class="ms-auto menu">
 						<ul>
 							<li><a href="#">Products</a></li>
@@ -69,23 +70,44 @@
 
 			<h2 class="toph">Top 15 Online Casinos in Canada 2025</h2>
 
+
+			<!-- Card -->
 			<div class="bestlist_card">
 				<div class="bestlist_card_num">1</div>
+				<div class="bestlist_card_label">welcome packages</div>
 				<div class="row">
-					<div class="col-lg-3 col-md-4">
+					<div class="col-lg-3 text-center">
 						<img src="img/bestlist/casino_01.png" class="bestlist_card_logo" alt="logo">
-						<p class="main-text-rate"><img src="img/main/rate.svg" alt="rate">9/10</p>
+						<p class="bestlist_rate"><img src="img/main/rate.svg" alt="rate">9/10</p>
 					</div>
-					<div class="col-lg-3 col-md-4 text-pad"><p>Tervetuliaisbonus</p><div class="promo-text fw-bold">450% jopa 1000 IK<br>+ 20% viikoittainen Cashback!</div></div>
-					<div class="col-lg-3 col-md-4 red">Section3</div>
-					<div class="col-lg-3 col-md-4 d-flex flex-column justify-content-center align-items-center align-self-center">
-						<button class="btn play-now">Play now</button>
-						<button class="btn read-rew">Read review</button>
+					<div class="col-lg-3 p-0 fw-bold">Tervetuliaisbonus
+						<div class="promo-text fw-bold pt-2">450% jopa 1000 IK<br>+ 20% viikoittainen Cashback!</div></div>
+						
+						<div class="col-lg-3 p-0">
+							<div class="promo-item">
+								<img src="img/promo/Vector.svg" alt="sign">
+								<p class="promo_conditions">Käyttäjäystävällinen alusta - Helppokäyttöinen ja selkeä käyttöliittymä</p>
+							  </div>
+							  <div class="promo-item">
+								<img src="img/promo/Vector.svg" alt="sign">
+								<p class="promo_conditions">Käyttäjäystävällinen alusta - Helppokäyttöinen ja selkeä käyttöliittymä</p>
+							  </div>
+							  <div class="promo-item">
+								<img src="img/promo/Vector.svg" alt="sign">
+								<p class="promo_conditions">Käyttäjäystävällinen alusta - Helppokäyttöinen ja selkeä käyttöliittymä</p>
+							  </div>
+						</div>
+							
+					<div class="col-lg-3 d-flex flex-column justify-content-center align-items-center">
+						<button class="btn fw-bold play-now">Play now</button>
+						<button class="btn fw-bolder read-rew">Read review</button>
 					</div>
 				</div>
-				<div class="text-center pt-2 small text-muted">18+ | Gamble responsibly | GambleAware.org | T&C's apply</div>
-			</div>
+				<div class="text-center pt-3 small text-muted">18+ | Gamble responsibly | GambleAware.org | T&C's apply</div>
+			</div>   <!-- Card -->
 
+
+			 <!-- Card -->
 			<div class="bestlist_card">
 				<div class="bestlist_card_num">1</div>
 				<div class="row">
@@ -101,12 +123,18 @@
 					</div>
 				</div>
 				<div class="text-center pt-2 small text-muted">18+ | Gamble responsibly | GambleAware.org | T&C’s apply</div>
-			</div>
+			</div>  <!-- Card -->
 
 		</div> 
 	</section><!-- /TOP-list -->
 
-
+		<!-- test_content -->
+		<section id="test_content">
+		  <div class="container">
+			<img src="https://dummyimage.com/400x300/999999/ffffff?text=Картинка-400x400" alt="Картинка-400x400">
+		  </div>
+		</section> <!-- / test_content -->
+		
 
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
