--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/media.css">
 </head>
-<body style="height: 2000px;">
+<body>
 
 	<!-- header -->
 	<header class="header">
 		<div class="container">
 			<div class="row">
 
-				<div class="col-4 col-lg-4">
+				<div class="col-5 col-lg-4">
 					<div class="logo"><img src="img/header/logo.svg" alt="logo"></div>
 				</div>
 
-				<div class="col-8 col-lg-8 menu-nav">
+				<div class="col-7 col-lg-8 menu-nav">
 					<nav class="ms-auto menu">
 						<ul>
 							<li><a href="#">Products</a></li>
