--- a/indexnavbaropened.html
+++ b/indexnavbaropened.html
@@ -36,7 +36,7 @@
 								aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"></span>
 							</button>
-							
+							<img src="https://dummyimage.com/1920x400/999999/ffffff?text=Картинка-1920x400" alt="Картинка-1920x400">
 							<div class="collapse navbar-collapse" id="navbarNav">
 								<!-- Додаємо кнопку закриття -->
 								<button class="btn-close d-lg-none" 
